<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/palette"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:background="@color/primary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <TextView
        android:id="@+id/tvRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="@color/icons"
        android:textSize="30sp"
        android:textStyle="bold"
        android:labelFor="@+id/etNombre"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:text="@string/titulo" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/fName"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:labelFor="@+id/etFecha"
        android:textColor="@color/primary_text"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegistro" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:contentDescription="@string/fDescripcionFecha"
        android:textStyle="italic"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNombre"

        />

    <Button
        android:id="@+id/btnFecha"
        android:layout_width="93dp"
        android:layout_height="46dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:elevation="10dp"
        android:text="@string/fFecha"
        android:theme="@style/boton"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/etFecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Telefono"
        android:imeOptions="actionDone"

        android:inputType="phone"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFecha" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""

        android:ems="10"
        android:hint="@string/Email"

        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:clickable="false"
        android:elevation="10dp"
        android:text="@string/siguiente"
        android:textSize="20sp"
        android:theme="@style/boton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descripcionContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/DescripcionContacto"
            android:imeOptions="actionDone"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>