<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmarDatos">

    <LinearLayout
        android:id="@+id/palette"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:background="@color/primary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <TextView
        android:id="@+id/tvRegistro2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:labelFor="@+id/etNombre"
        android:text="@string/confirmar"
        android:textAlignment="center"
        android:textColor="@color/icons"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:id="@+id/layoutNombre"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/palette">

        <TextView
            android:id="@+id/tvnombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/nombreFConfirmar"
            android:textColor="@color/primary_text"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFecha"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutNombre">

        <TextView
            android:id="@+id/tvfecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/fechaFConfirmar"
            android:textColor="@color/primary_text"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTelefono"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutFecha">

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/telefonoFConfirmar"
            android:textColor="@color/primary_text"
            android:textSize="20sp"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTelefono">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/emailFConfirmar"
            android:textColor="@color/primary_text"
            android:textSize="20sp"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutEmail">

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/descripcionFConfirmar"
            android:textColor="@color/primary_text"
            android:textSize="20sp"

            />
    </LinearLayout>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="238dp"
        android:layout_height="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:text="@string/Editar"
        android:theme="@style/boton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutDescripcion" />
</androidx.constraintlayout.widget.ConstraintLayout>